ghc-4335c07/testsuite/tests/partial-sigs/should_compile/UncurryNamed.hs
{-# LANGUAGE PartialTypeSignatures, NamedWildCards #-}
module UncurryNamed where

unc :: (_a -> _b -> _c) -> (_a, _b) -> _c
unc = uncurry
