ghc-4335c07/testsuite/tests/partial-sigs/should_fail/NestedNamedExtraConstraintsWildcard.hs
{-# LANGUAGE RankNTypes, PartialTypeSignatures, NamedWildCards #-}
module NestedNamedExtraConstraintsWildcard where

foo :: Bool -> (Eq a, _a) => a
foo = undefined
